--- a/stalkea_clone/nixpacks.toml
+++ b/stalkea_clone/nixpacks.toml
@@ -1,3 +1,6 @@
+# Explicitly define providers to avoid auto-detection issues (e.g. Node)
+providers = ["python"]
+
 [phases.setup]
 nixPkgs = ["python3", "gcc"]
 
@@ -5,4 +8,4 @@ nixPkgs = ["python3", "gcc"]
 cmds = ["pip install -r requirements.txt"]
 
 [start]
-cmd = "python server.py"
+cmd = "gunicorn server:app"
