--- a/stalkea_clone/nixpacks.toml
+++ b/stalkea_clone/nixpacks.toml
@@ -5,7 +5,7 @@ providers = ["python"]
 nixPkgs = ["python3", "gcc"]
 
 [phases.install]
-cmds = ["pip install -r requirements.txt"]
+cmds = ["python3 -m pip install -r requirements.txt"]
 
 [start]
 cmd = "gunicorn server:app --bind 0.0.0.0:$PORT"
