--- a/stalkea_clone/nixpacks.toml
+++ b/stalkea_clone/nixpacks.toml
@@ -1,11 +1,8 @@
 # Explicitly define providers to avoid auto-detection issues (e.g. Node)
 providers = ["python"]
 
-[phases.setup]
-nixPkgs = ["python3", "gcc"]
-
-[phases.install]
-cmds = ["python3 -m pip install -r requirements.txt"]
+# Deixamos o Nixpacks configurar o Python e Pip automaticamente
+# (Removido phases.setup e phases.install manuais que estavam quebrando o pip)
 
 [start]
 cmd = "gunicorn server:app --bind 0.0.0.0:$PORT"
