--- a/vercel.json
+++ b/vercel.json
@@ -14,7 +14,7 @@
     "crons": [
         {
             "path": "/api/cron/phishing-check",
-            "schedule": "*/15 * * * *"
+            "schedule": "0 10 * * *"
         }
     ]
 }
