--- a/vercel.json
+++ b/vercel.json
@@ -15,6 +15,10 @@
         {
             "path": "/api/cron/phishing-check",
             "schedule": "0 10 * * *"
+        },
+        {
+            "path": "/api/cron/recovery-check",
+            "schedule": "*/10 * * * *"
         }
     ]
 }
